tests/ui/fail_user_error_external_trait_def_register_missing.rs
#[thin_delegate::external_trait_def]
mod __external_trait_def {
    pub trait AsRef<T: ?Sized> {
        /// Converts this type into a shared reference of the (usually inferred) input type.
        #[stable(feature = "rust1", since = "1.0.0")]
        fn as_ref(&self) -> &T;
    }
}

fn main() {}
